<resources>
    <string name="app_name">E-connect</string>
    <string name="title_activity_dashboard">Activity_dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_queries">Queries</string>
    <string name="title_notes">Notes</string>
    <string name="title_my_profile">MY Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>