<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_queries"
        android:icon="@drawable/question_answer"
        android:title="@string/title_queries" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/auto_stories_24"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_add_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_my_profile"
        android:icon="@drawable/person_24"
        android:title="@string/title_my_profile" />

</menu>